<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPostActivity">

    <EditText
        android:id="@+id/add_post_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/custom_add_name"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="24sp"
        tools:ignore="Autofill,HardcodedText,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/add_post_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/custom_add_body"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="24sp"
        tools:ignore="Autofill,HardcodedText,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/add_post_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/custom_add_date"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="24sp"
        tools:ignore="Autofill,HardcodedText,TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/add_post_followers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/custom_add_followers"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="24sp"
        tools:ignore="Autofill,HardcodedText,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/add_post_posts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/custom_add_posts"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="24sp"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/add_post_following"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/custom_add_following"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="24sp"
        tools:ignore="Autofill,HardcodedText,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/add_btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_add_btn_save"
        tools:ignore="HardcodedText,VisualLintButtonSize" />
</LinearLayout>