<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Areas">

    <Spinner
        android:id="@+id/areas_sp_shapes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/shapes"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/areas_et_rectangle_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/areas_rectangle_width_hint"
            android:inputType="number"
            android:padding="16dp"
            android:textSize="24sp"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/areas_et_rectangle_hieght"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/areas_rectangle_hieght_hint"
            android:inputType="number"
            android:padding="16dp"
            android:textSize="24sp"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <EditText
        android:id="@+id/areas_et_circle_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:hint="@string/areas_circle_radius_hint"
        android:inputType="number"
        android:padding="16dp"
        android:textSize="24sp"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/areas_et_triangle_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/areas_triangle_base_hint"
            android:inputType="number"
            android:padding="16dp"
            android:textSize="24sp"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/areas_et_triangle_hieght"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/areas_triangle_hieght_hint"
            android:inputType="number"
            android:padding="16dp"
            android:textSize="24sp"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </LinearLayout>

    <Button
        android:id="@+id/areas_btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:padding="16dp"
        android:text="@string/areas_calculate_text"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/areas_tv_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CAE0DE"
        android:baselineAligned="false"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />
</LinearLayout>